--- a/Schooldbwebapiassign.csproj
+++ b/Schooldbwebapiassign.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Shippermodel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Schooldbmodel.Context.cs">
       <AutoGen>True</AutoGen>
@@ -264,7 +265,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
